--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
     <div id="footer-icons">
         <a href="mailto:{{site.email}}" class="footer-link"><i class="fas fa-envelope footer-icon fa-2x"></i></a>
         <a target="_blank" href="https://github.com/{{site.github_username}}" class="footer-link"><i class="fab fa-github-square footer-icon fa-2x"></i></a>
+        <a target="_blank" href="https://twitter.com/{{site.twitter_username}}" class="footer-link"><i class="fab fa-twitter footer-icon fa-2x"></i></a>
     </div>
     <div id="footer-copyright">
         <p style="text-align: center;">&copy; 2022 {{site.title}}</p>
