--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -7,6 +7,7 @@
         <ul id="tutorials-list">
               <a href="/programming/golang/"><li>Introduction to Go</li></a>
               <a href="/programming/golang/environment-setup/"><li>Environment Setup</li></a>
+              <a href="/programming/golang/your-first-go-program"><li>Your First Go Program</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
