--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -11,6 +11,7 @@
               <a href="/programming/golang/"><li>Introduction to Go</li></a>
               <a href="/programming/golang/environment-setup/"><li>Environment Setup</li></a>
               <a href="/programming/golang/your-first-go-program/"><li>Your First Go Program</li></a>
+              <a href="/programming/golang/printing/"><li>Printing</li></a>
               <a href="/programming/golang/variables/"><li>Variables</li></a>
         </ul>
         {%- include footer.html -%}
