--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -8,6 +8,7 @@
               <a href="/programming/python/"><li>Introduction to Python</li></a>
               <a href="/programming/python/environment-setup/"><li>Environment Setup</li></a>
               <a href="/programming/python/your-first-python-program/"><li>Your First Python Program</li></a>
+              <a href="/programming/python/more-on-printing"><li>More on Printing</li></a>
               <a href="/programming/python/variables/"><li>Variables</li></a>
               <a href="/programming/python/data-types/"><li>Data Types</li></a>
               <a href="/programming/python/comments/"><li>Comments</li></a>
