--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/js/script.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
-    <link rel="icon" type="image/x-icon" href="/logo.png">
+    <link rel="icon" type="image/x-icon" href="/images/logo.png">
 </head>
