--- a/_layouts/golang.html
+++ b/_layouts/golang.html
@@ -15,7 +15,7 @@
               <a href="/programming/golang/data-types/"><li>Data Types</li></a>
               <a href="/programming/golang/constants/"><li>Constants</li></a>
               <a href="/programming/golang/arithmetic/"><li>Arithmetic</li></a>
-              <a href="/programming/golang/comments/"><li>Comments/li></a>
+              <a href="/programming/golang/comments/"><li>Comments</li></a>
               <a href="/programming/golang/more-on-printing/"><li>More on Printing</li></a>
               <a href="/programming/golang/functions/"><li>Functions</li></a>
         </ul>
