--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,7 @@
     <script src="/assets/js/script.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
+    <link rel="stylesheet" href="https://simiancdn.github.io/highlight/styles/dark.min.css">
+    <script src="https://simiancdn.github.io/highlight/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </head>
