--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,6 @@
 	<li class="navitem"><a href="/programming/golang/">Go</a></li>
   	<li class="navitem"><a href="/programming/cpp/">C++</a></li>
 	<li class="navitem"><a href="/programming/java/">Java</a></li>
-	<li class="navitem"><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li>
-	<li class="navitem"><a onclick="switchLight()" id="toggledarklight2">Toggle Light</a></li>
+	<li class="navitem"><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li><!-- 
+	<li class="navitem"><a onclick="switchLight()" id="toggledarklight2">Toggle Light</a></li> -->
 </ul>
