--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,3 +8,4 @@
         <p style="text-align: center;">&copy; 2022 {{site.title}}</p>
     </div>
 </footer>
+<script src="/assets/js/script.js"></script>
