--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
-    <script src="/assets/js/script.js"></script>
+<!--     <script src="/assets/js/script.js"></script> -->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
 <!--     <link rel="stylesheet" href="https://simiancdn.github.io/highlight/styles/dark.min.css">
