--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,16 @@
 	<li class="navitem"><a href="/programming/golang/">Go</a></li>
   	<li class="navitem"><a href="/programming/cpp/">C++</a></li>
 	<li class="navitem"><a href="/programming/java/">Java</a></li>
+	<div class="dropdown">
+    <button class="dropbtn">Dropdown 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
 	<li class="navitem"><a onclick="switchDark()" id="toggledarklight">Toggle Dark</a></li><!-- 
 	<li class="navitem"><a onclick="switchLight()" id="toggledarklight2">Toggle Light</a></li> -->
 </ul>
